fix(tables, demo, status): * fix table headers * fix table spacing * fix table word break * fix status word break * fix tooltip & sizing section of demo

--- a/docs/demo/assets/styles/partials/_sg-tooltip-section.scss
+++ b/docs/demo/assets/styles/partials/_sg-tooltip-section.scss
@@ -1,11 +1,22 @@
-.sg-has-tooltip-section button {
-    width: 100%;
-    font-size: 1.2rem;
-}
+.sg-has-tooltip-section {
+    @media (min-width: $dc-medium-width) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
-.sg-has-tooltip-section__box {
-    width: 33.33333333%;
-    padding: 12px;
-    background: white;
-    float:left;
+    .sg-has-tooltip-section__box  {
+
+        @media (min-width: $dc-medium-width) {
+            width: 33.33%;
+            padding-right: $dc-space100;
+
+            &:nth-child(3n) {
+                padding-right: 0;
+            }
+        }
+    }
+
+    button {
+        margin-bottom: $dc-space100;
+    }
 }
